--- a/packages/manager/modules/navbar/src/index.less
+++ b/packages/manager/modules/navbar/src/index.less
@@ -34,7 +34,7 @@
   @navbar-menu-content-color: #113f6d;
   @navbar-menu-content-shadow-color: #e3e6e8;
 
-  top: 2.85rem;
+  top: @oui-navbar-height;
 
   .oui-navbar-list {
     background-color: @navbar-menu-background-color;
